Création du tableau contenant tout les valeurs

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
         </tr>
       </tbody>
     </table>
+    <button id="button-verifier">Vérifier</button>
     <script src="index.js"></script>
   </body>
 </html>
