--- a/index.html
+++ b/index.html
@@ -121,5 +121,6 @@
     </table>
     <button id="button-verifier">Vérifier</button>
     <script src="index.js"></script>
+    <script src="script-importer.js"></script>
   </body>
 </html>
