--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
       </tbody>
     </table>
     <button id="button-verifier">Vérifier</button>
+    <button id="button-resoudre">Résoudre</button>
     <script src="index.js"></script>
     <script src="script-importer.js"></script>
   </body>
