Création des différentes classes

--- a/index.html
+++ b/index.html
@@ -123,5 +123,6 @@
     <button id="button-resoudre">Résoudre</button>
     <script src="index.js"></script>
     <script src="script-importer.js"></script>
+    <script src="script-resoudre.js" type="module"></script>
   </body>
 </html>
